[package]
name = "nesquic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { version = "*" }
rcgen = "0.12.0"
tokio = { version = "*", features = ["full"] }
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
tracing = "0.1"
clap = { version = "3.0", features = ["derive"] }
bytes = "1.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
